[gd_scene load_steps=2 format=3 uid="uid://cl4aqh23pldo8"]

[ext_resource type="Script" path="res://backlog.gd" id="1_bp8u5"]

[node name="Backlog" type="Node2D"]
position = Vector2(-1, -3)
script = ExtResource("1_bp8u5")

[node name="Label" type="Label" parent="."]
offset_left = 4.0
offset_top = 134.0
offset_right = 323.0
offset_bottom = 147.0
theme_override_font_sizes/font_size = 9
text = "Ordem escolhida: "

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 2.0
offset_top = 5.0
offset_right = 319.0
offset_bottom = 127.0

[node name="US1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "1 - Eu, como candidato, quero consultar meu status para saber se obtive êxito no teste de apitdão
"

[node name="US2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "2 - Eu, como administrador, quero consultar os candidatos por aptidão para organizar meu fluxo de trabalho
"

[node name="US3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "3 - Eu, como administrador quero alocar pessoas em planetas para combater as corporações eficientemente
"

[node name="US4" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "4 - Eu, como candidato, quero fazer um teste de aptidão para definir meus atributos"

[node name="US5" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "5 - Eu, como candidato, quero me cadastrar no sistema da resistência para servir a galáxia"

[node name="US6" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "6 - Eu, como administrador, quero aprovar candidados com base em suas aptidões para filtrar os ingressantes"

[node name="Avançar" type="Button" parent="."]
offset_left = 264.0
offset_top = 151.0
offset_right = 316.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 11
text = "Avançar"

[connection signal="pressed" from="VBoxContainer/US1" to="." method="_on_us_1_pressed"]
[connection signal="pressed" from="VBoxContainer/US2" to="." method="_on_us_2_pressed"]
[connection signal="pressed" from="VBoxContainer/US3" to="." method="_on_us_3_pressed"]
[connection signal="pressed" from="VBoxContainer/US4" to="." method="_on_us_4_pressed"]
[connection signal="pressed" from="VBoxContainer/US5" to="." method="_on_us_5_pressed"]
[connection signal="pressed" from="VBoxContainer/US6" to="." method="_on_us_6_pressed"]
[connection signal="pressed" from="Avançar" to="." method="_avancar"]
